# AssemblyInfo-Updater

./: README.md  config.json  main.py  pyproject.toml  requirements.txt
src/: functions.py
tests/: conftest.py  test_version_update.py
